tracker visualizaiton updates

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 104,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Michi\\acoustic_covid_detection\\python\n"
+      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 105,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-05-12_resnet18_logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel_baseline_hyperparams_v1.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-05-14_resnet18_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel_baseline_hyperparams.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 106,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,9 +62,9 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_05_05_logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel.pickle\n",
+      "           participants_file:             2023_05_11_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel.pickle\n",
       "           augmented_files:               []\n",
       "           train_set_label_counts:        label '0': 818  -  label '1': 214\n",
       "           types_of_recording:            combined_breaths\n",
@@ -75,13 +75,13 @@
       "           n_features:                    224\n",
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
-      "           window_length:                 1024\n",
-      "           hop_size:                      256\n",
+      "           window_length:                 4096\n",
+      "           hop_size:                      2048\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
-      "           hop_size_ms:                   11.61\n",
-      "           window_length_ms:              46.44\n",
-      "           duration_seconds:              2.6\n",
+      "           hop_size_ms:                   92.88\n",
+      "           window_length_ms:              185.76\n",
+      "           duration_seconds:              20.81\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
@@ -90,9 +90,9 @@
       "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                24\n",
+      "           parameter runs:                48\n",
       "           folds per run:                 1\n",
-      "           epochs:                        400\n"
+      "           epochs:                        200\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 107,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 108,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel\n",
       "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'BCEWithLogitsLoss'}\n"
      ]
     },
@@ -168,13 +168,13 @@
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_05_05_logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel.pickle',\n",
+       " 'participants_file': '2023_05_11_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel.pickle',\n",
        " 'augmented_files': [],\n",
        " 'train_set_label_counts': \"label '0': 818  -  label '1': 214\",\n",
        " 'types_of_recording': 'combined_breaths'}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 109,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9387eea21914433bf9fc412d47fdb25",
+       "model_id": "dd6be93033174ee8862456d7734b0bd1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 113,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
      "text": [
       "\n",
       "Parameters used for finding the best performing epoch:\n",
-      "           metric_used:                   loss\n",
+      "           metric_used:                   auc_roc\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         10\n"
      ]
@@ -249,7 +249,7 @@
    ],
    "source": [
     "n_samples = 10\n",
-    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"loss\")"
+    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
   },
   {
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 114,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e65eafc5092942bd8d316ac828ccb4b0",
+       "model_id": "a9b097a2e4cb493e925bbf68546d2e61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -324,14 +324,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 112,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d06ef503a6449eb89059066d36094c8",
+       "model_id": "44d191a0f21c43fe9196a9794e748508",
        "version_major": 2,
        "version_minor": 0
       },
@@ -365,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 99,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c88c84ac2db4dc08e66577cd6e8cb67",
+       "model_id": "acb0b030c7e54efaad39ceac57249c67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -449,14 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "236b5566bf2c47c48bfd15650699509e",
+       "model_id": "3e2cb31732274990916f7a3634a85d8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -510,12 +510,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ba78200b78c4d6bb1c56ffa5c9fa67f",
+       "model_id": "e448b349295446b09e0e5edbf0a56610",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '8e-05', 'wd': '0.0001', …"
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '0.0001', 'wd': '0.0001',…"
       ]
      },
      "metadata": {},
@@ -535,146 +535,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23e205f6-8342-4672-8511-5a99c6039102",
+   "id": "36c401b3-7cdb-48dd-92d7-dbab8e2c93d8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "e11f3b31",
+   "execution_count": null,
+   "id": "464a6a33-283d-4def-8e24-8b87e409fe8b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_columns_with_multiple_unique_values(df):\n",
-    "    \"\"\"\n",
-    "    Returns only the columns that have more than one unique value in their rows.\n",
-    "    \"\"\"\n",
-    "    cols_with_multiple_unique_vals = []\n",
-    "    for col in df.columns:\n",
-    "        unique_vals = df[col].unique()\n",
-    "        if len(unique_vals) > 1:\n",
-    "            cols_with_multiple_unique_vals.append(col)\n",
-    "    return list(df[cols_with_multiple_unique_vals].columns)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "da255491",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['batch',\n",
-       " 'lr',\n",
-       " 'wd',\n",
-       " 'lr_decay',\n",
-       " 'mixup_a',\n",
-       " 'mixup_p',\n",
-       " 'use_augm_datasets',\n",
-       " 'shift',\n",
-       " 'sigma',\n",
-       " 'weighted_sampler',\n",
-       " 'class_weight',\n",
-       " 'bag_size',\n",
-       " 'n_MIL_Neurons',\n",
-       " 'time_steps',\n",
-       " 'lr_in',\n",
-       " 'resnet_dropout',\n",
-       " 'focal_loss',\n",
-       " 'min_quality']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tracker.hyperparameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "1c104344-55ce-40c5-8537-a5961b87f1f5",
+   "execution_count": null,
+   "id": "d797ed96-d04b-4f14-a724-c679595f6d23",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_unique_parameter_combinations(separate_parameter=\"lr\"):\n",
-    "    cols = tracker.get_only_varied_hyperparam_columns()\n",
-    "    if separate_parameter is not None:\n",
-    "        cols.remove(separate_parameter)\n",
-    "    parameter_combinations = tracker.full_metric_performance_df[cols].to_dict(orient='records')\n",
-    "    parameter_combinations = [str(item) for item in parameter_combinations]\n",
-    "    unique_combinations = list(set(parameter_combinations))\n",
-    "    return unique_combinations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "63be7e31-caba-41ba-9e18-3679ff50b47e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"{'time_steps': '400', 'resnet_dropout': 'False', 'min_quality': '2'}\",\n",
-       " \"{'time_steps': '100', 'resnet_dropout': 'True', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '100', 'resnet_dropout': 'False', 'min_quality': '2'}\",\n",
-       " \"{'time_steps': '200', 'resnet_dropout': 'False', 'min_quality': '2'}\",\n",
-       " \"{'time_steps': '400', 'resnet_dropout': 'False', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '400', 'resnet_dropout': 'True', 'min_quality': '2'}\",\n",
-       " \"{'time_steps': '400', 'resnet_dropout': 'True', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '100', 'resnet_dropout': 'False', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '200', 'resnet_dropout': 'False', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '200', 'resnet_dropout': 'True', 'min_quality': '2'}\",\n",
-       " \"{'time_steps': '200', 'resnet_dropout': 'True', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '100', 'resnet_dropout': 'True', 'min_quality': '2'}\"]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unique_list = get_unique_parameter_combinations()\n",
-    "unique_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "c8440dc9-ecea-4b5d-84a7-50265e2a4565",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "\"{'time_steps': '100', 'resnet_dropout': 'False'}\" is not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m unique_list\u001b[38;5;241m.\u001b[39mindex(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime_steps\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m100\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresnet_dropout\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFalse\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m}\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: \"{'time_steps': '100', 'resnet_dropout': 'False'}\" is not in list"
-     ]
-    }
-   ],
-   "source": [
-    "unique_list.index(\"{'time_steps': '100', 'resnet_dropout': 'False'}\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai38",
+   "display_name": "Python (python_v3-8)",
    "language": "python",
-   "name": "ai38"
+   "name": "python_v3-8"
   },
   "language_info": {
    "codemirror_mode": {
