separate main and run configurations
this way multiple hyperparameter runs can be started at the same time

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
+      "C:\\Michi\\acoustic_covid_detection\\python\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-05-14_resnet18_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel_baseline_hyperparams.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-05-21_resnet18_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel_addedAugments_variedDropoutP_v2.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
       "logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
       "           participants_file:             2023_05_11_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel.pickle\n",
-      "           augmented_files:               []\n",
+      "           augmented_files:               ['2023_05_15_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmelaugmented.pickle']\n",
       "           train_set_label_counts:        label '0': 818  -  label '1': 214\n",
       "           types_of_recording:            combined_breaths\n",
       "\n",
@@ -92,7 +92,7 @@
       "Tracker contains:\n",
       "           parameter runs:                48\n",
       "           folds per run:                 1\n",
-      "           epochs:                        200\n"
+      "           epochs:                        350\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -169,12 +169,12 @@
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
        " 'participants_file': '2023_05_11_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel.pickle',\n",
-       " 'augmented_files': [],\n",
+       " 'augmented_files': ['2023_05_15_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmelaugmented.pickle'],\n",
        " 'train_set_label_counts': \"label '0': 818  -  label '1': 214\",\n",
        " 'types_of_recording': 'combined_breaths'}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd6be93033174ee8862456d7734b0bd1",
+       "model_id": "464a43b6dc704bd8a7ca8987778573e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
      "text": [
       "\n",
       "Parameters used for finding the best performing epoch:\n",
-      "           metric_used:                   auc_roc\n",
+      "           metric_used:                   accuracy\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         10\n"
      ]
@@ -249,7 +249,7 @@
    ],
    "source": [
     "n_samples = 10\n",
-    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
+    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"accuracy\")"
    ]
   },
   {
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9b097a2e4cb493e925bbf68546d2e61",
+       "model_id": "65d6ecd55a0d489ea3fb10121162fa62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,22 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c528fc80-4c73-498f-beeb-84c0484f7888",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44d191a0f21c43fe9196a9794e748508",
+       "model_id": "48687e83d74e49e5bd935d7fd2f6610c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -365,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acb0b030c7e54efaad39ceac57249c67",
+       "model_id": "3530c7f2feb846f5a00187bbef61d6bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -438,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -449,14 +441,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e2cb31732274990916f7a3634a85d8d",
+       "model_id": "9d8fd6ca85564a3ca3de8b8a7da257f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -483,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -501,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -510,12 +502,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e448b349295446b09e0e5edbf0a56610",
+       "model_id": "020d65c2a6364d43aab362cd411f4cb5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '0.0001', 'wd': '0.0001',…"
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '8e-05', 'wd': '0.0001', …"
       ]
      },
      "metadata": {},
@@ -555,13 +547,29 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "915bb7ce-c457-4cc0-ba4a-0519a329b52a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70aa1f24-0af9-4b63-8ee5-c7e32bf9ad64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (python_v3-8)",
+   "display_name": "ai38",
    "language": "python",
-   "name": "python_v3-8"
+   "name": "ai38"
   },
   "language_info": {
    "codemirror_mode": {
