settings and audioprocessing updates

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-05-21_resnet18_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel_addedAugments_variedDropoutP_v2.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-05-14_resnet18_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel_baseline_hyperparams.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,11 +62,11 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_05_11_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel.pickle\n",
-      "           augmented_files:               ['2023_05_15_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmelaugmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 818  -  label '1': 214\n",
+      "           participants_file:             2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle\n",
+      "           augmented_files:               []\n",
+      "           train_set_label_counts:        label '0': 1013  -  label '1': 290\n",
       "           types_of_recording:            combined_breaths\n",
       "\n",
       "Audio Processing Parameters:\n",
@@ -75,13 +75,13 @@
       "           n_features:                    224\n",
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
-      "           window_length:                 4096\n",
-      "           hop_size:                      2048\n",
+      "           window_length:                 1024\n",
+      "           hop_size:                      512\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
-      "           hop_size_ms:                   92.88\n",
-      "           window_length_ms:              185.76\n",
-      "           duration_seconds:              20.81\n",
+      "           hop_size_ms:                   23.22\n",
+      "           window_length_ms:              46.44\n",
+      "           duration_seconds:              5.2\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
@@ -90,9 +90,9 @@
       "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                48\n",
+      "           parameter runs:                24\n",
       "           folds per run:                 1\n",
-      "           epochs:                        350\n"
+      "           epochs:                        200\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
       "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'BCEWithLogitsLoss'}\n"
      ]
     },
@@ -168,13 +168,13 @@
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_05_11_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel.pickle',\n",
-       " 'augmented_files': ['2023_05_15_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmelaugmented.pickle'],\n",
-       " 'train_set_label_counts': \"label '0': 818  -  label '1': 214\",\n",
+       " 'participants_file': '2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle',\n",
+       " 'augmented_files': [],\n",
+       " 'train_set_label_counts': \"label '0': 1013  -  label '1': 290\",\n",
        " 'types_of_recording': 'combined_breaths'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "464a43b6dc704bd8a7ca8987778573e6",
+       "model_id": "ae3f2fa966f645cb8e5e94380bc44d2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 93,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 94,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65d6ecd55a0d489ea3fb10121162fa62",
+       "model_id": "b37db915575f4723b5d7e65ca2b4a43b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 81,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48687e83d74e49e5bd935d7fd2f6610c",
+       "model_id": "524900aa81eb46abbddd0859d44a8824",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3530c7f2feb846f5a00187bbef61d6bb",
+       "model_id": "46d6c3289b504e61b40ed6784ac2cde9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -441,14 +441,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 96,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d8fd6ca85564a3ca3de8b8a7da257f0",
+       "model_id": "39db5c4a18d34031bd59647f40817ed7",
        "version_major": 2,
        "version_minor": 0
       },
