--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 266,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 267,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-05-14_resnet18_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel_baseline_hyperparams.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-05-21_resnet18_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel_addedAugments_variedDropoutP_v2.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 268,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,11 +62,11 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle\n",
-      "           augmented_files:               []\n",
-      "           train_set_label_counts:        label '0': 1013  -  label '1': 290\n",
+      "           participants_file:             2023_05_11_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel.pickle\n",
+      "           augmented_files:               ['2023_05_15_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmelaugmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 818  -  label '1': 214\n",
       "           types_of_recording:            combined_breaths\n",
       "\n",
       "Audio Processing Parameters:\n",
@@ -75,13 +75,13 @@
       "           n_features:                    224\n",
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
-      "           window_length:                 1024\n",
-      "           hop_size:                      512\n",
+      "           window_length:                 4096\n",
+      "           hop_size:                      2048\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
-      "           hop_size_ms:                   23.22\n",
-      "           window_length_ms:              46.44\n",
-      "           duration_seconds:              5.2\n",
+      "           hop_size_ms:                   92.88\n",
+      "           window_length_ms:              185.76\n",
+      "           duration_seconds:              20.81\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
@@ -90,9 +90,9 @@
       "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                24\n",
+      "           parameter runs:                48\n",
       "           folds per run:                 1\n",
-      "           epochs:                        200\n"
+      "           epochs:                        350\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 269,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 270,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel\n",
       "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'BCEWithLogitsLoss'}\n"
      ]
     },
@@ -168,13 +168,13 @@
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle',\n",
-       " 'augmented_files': [],\n",
-       " 'train_set_label_counts': \"label '0': 1013  -  label '1': 290\",\n",
+       " 'participants_file': '2023_05_11_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel.pickle',\n",
+       " 'augmented_files': ['2023_05_15_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmelaugmented.pickle'],\n",
+       " 'train_set_label_counts': \"label '0': 818  -  label '1': 214\",\n",
        " 'types_of_recording': 'combined_breaths'}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 271,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae3f2fa966f645cb8e5e94380bc44d2c",
+       "model_id": "a5173b74d9f6425e901359701bb77e1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 272,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
      "text": [
       "\n",
       "Parameters used for finding the best performing epoch:\n",
-      "           metric_used:                   accuracy\n",
+      "           metric_used:                   loss\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         10\n"
      ]
@@ -249,7 +249,7 @@
    ],
    "source": [
     "n_samples = 10\n",
-    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"accuracy\")"
+    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"loss\")"
    ]
   },
   {
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 273,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b37db915575f4723b5d7e65ca2b4a43b",
+       "model_id": "e7c214b56eff40099f9c405983d02c61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 242,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "524900aa81eb46abbddd0859d44a8824",
+       "model_id": "cd187cf16d824ffaa74d66399f171da7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,23 +357,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 251,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46d6c3289b504e61b40ed6784ac2cde9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [251], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m options \u001b[38;5;241m=\u001b[39m tracker\u001b[38;5;241m.\u001b[39mget_only_varied_hyperparam_columns()\n\u001b[1;32m----> 2\u001b[0m dropdown_groupby \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mDropdown(options\u001b[38;5;241m=\u001b[39moptions, value\u001b[38;5;241m=\u001b[39moptions[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      4\u001b[0m _ \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39minteract(tracker\u001b[38;5;241m.\u001b[39mboxplot_groupedby_combination, metric\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mmetrics_used,\n\u001b[0;32m      5\u001b[0m                      show_n_best_runs\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs),\n\u001b[0;32m      6\u001b[0m                      \u001b[38;5;66;03m# group_by_hyperparameter=[\"some\", *tracker.get_only_varied_hyperparam_columns()],\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     10\u001b[0m                      fontsize\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m6\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m),\n\u001b[0;32m     11\u001b[0m                     )\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
@@ -400,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 228,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -430,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 229,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -441,14 +438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 260,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39db5c4a18d34031bd59647f40817ed7",
+       "model_id": "b38423ac10c34ba88bb0c72b240774f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -462,6 +459,8 @@
    ],
    "source": [
     "options = tracker.get_only_varied_hyperparam_columns()\n",
+    "if len(options) == 0:\n",
+    "    options = [None]\n",
     "dropdown_colorby = widgets.Dropdown(options=[None, *options], value=options[0])\n",
     "_ = widgets.interact(tracker.show_all_runs, \n",
     "                     mode=[\"eval\", \"train\"], \n",
@@ -475,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 231,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -493,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 192,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -502,12 +501,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "020d65c2a6364d43aab362cd411f4cb5",
+       "model_id": "097e2f6a42d94b20ac2d88738f4594a2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '8e-05', 'wd': '0.0001', …"
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '0.001', 'wd': '0.0001', …"
       ]
      },
      "metadata": {},
